--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+server.servlet.context-path=/loja
 
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+spring.h2.console.enabled=true
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/simulados
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=none
+
+# Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# Because detection is disabled you have to set correct dialect by hand.
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+spring.jpa.show-sql=true
+
+spring.datasource.initialization-mode=always
+
+spring.flyway.enabled= true
+spring.flyway.url=jdbc:postgresql://localhost:5432/simulados
+spring.flyway.user=postgres
+spring.flyway.password=root
+spring.flyway.baseline-on-migrate= true
+spring.flyway.ignore-future-migrations= false
