--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,7 @@
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=none
 
 spring.flyway.enabled=false
-spring.flyway.url=${JDBC_DATABASE_URL}
-spring.flyway.user=${JDBC_DATABASE_USERNAME}
-spring.flyway.password=${JDBC_DATABASE_PASSWORD}
+spring.flyway.url=${DATABASE_URL}
 spring.flyway.baseline-on-migrate= true
 spring.flyway.ignore-future-migrations= false
