--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,6 +2,8 @@ spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=none
 
 spring.flyway.enabled=false
-spring.flyway.url=${DATABASE_URL}
+spring.flyway.url=${JDBC_DATABASE_URL}
+spring.flyway.user=${JDBC_DATABASE_USER}
+spring.flyway.password=${JDBC_DATABASE_PASSWORD}
 spring.flyway.baseline-on-migrate= true
 spring.flyway.ignore-future-migrations= false
