Finalização da RN04

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url==jdbc:postgresql://localhost:5432/simulados
+spring.datasource.url=jdbc:postgresql://localhost:5432/simulados
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
