--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.initialization-mode=always
 
-spring.profiles.active=prod
+spring.profiles.active=dev
