--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,13 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.flyway.enabled= true
 spring.flyway.url=jdbc:postgresql://localhost:5432/simulados
 spring.flyway.user=postgres
 spring.flyway.password=root
 spring.flyway.baseline-on-migrate= true
 spring.flyway.ignore-future-migrations= false
+
+spring.flyway.locations=classpath:/db/migration,classpath:/db/testdata
