inicio da alteração nos dto/parser e correção na lib do lombok

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-envers</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
